# AMD_Robotics_Hackathon_Team15

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: mission1.md  mission2.md  training.md
mission1/code/: training-models-on-rocm.ipynb
mission1/wandb/: latest-run
mission1/wandb/run-20251213_143933-etnufwd1/: run-etnufwd1.wandb
mission1/wandb/run-20251213_143933-etnufwd1/files/: config.yaml  wandb-metadata.json  wandb-summary.json
mission2/: __init__.py  tasks_smolvla.json
mission2/ai/: __init__.py  interface.py  minimax.py  random_ai.py
mission2/app/: __init__.py  calibrate_connect4.py  game_dashboard.py  vision_monitor.py
mission2/cli/: __init__.py  main.py
mission2/code/: training-models-on-rocm-smolvla.ipynb
mission2/core/: __init__.py  bus.py  config.py  events.py  types.py
mission2/game/: __init__.py  engine.py  rules.py
mission2/robot/: __init__.py  interface.py  lerobot_record.py  mock.py  positions.py  smolvla.py  smolvla_controller.py
mission2/streaming/: __init__.py  http_receiver.py  receiver.py
mission2/vision/: __init__.py  board_detector.py  calibration.json  calibration.py  interface.py  mock_detector.py  stream_detector.py
mission2/wandb/: latest-run
mission2/wandb/run-20251214_035201-6ima45d9/: run-6ima45d9.wandb
mission2/wandb/run-20251214_035201-6ima45d9/files/: config.yaml  wandb-metadata.json  wandb-summary.json
scripts/: calibrate_robot.sh  check_dataset.py  inference.py  record_dataset.sh  record_dataset_interactive.sh  record_dataset_vla.sh  review_dataset.sh  run_inference.sh  run_inference_vla.sh  simple_run.py  simple_run_lerobot_record.py  stream_emit.py  stream_http.py  stream_receive.py  test_teleoperate.sh  upload_dataset.sh
